feat: Add AI response generation service (Feature #4 Phase 2)
- Implemented AI response generator using OpenAI GPT-4
- Created context-aware prompts with tone matching
- Added email service for sending responses with nodemailer
- Built API endpoint for generating and sending responses
- Created response templates for common scenarios
- Added comprehensive documentation
- Updated environment variables documentation

Features:
- Personalized responses based on inquiry details
- Tone adjustment based on urgency (PROFESSIONAL, WARM, EMPATHETIC, URGENT)
- Home matching and recommendations
- Next steps suggestions
- Professional email formatting with CareLinkAI branding
- Draft and send capabilities with status tracking

Key Components:
- InquiryResponseGenerator class with OpenAI integration
- InquiryEmailService for professional email delivery
- API endpoint: POST /api/inquiries/:id/generate-response
- Response templates for common scenarios
- Comprehensive documentation in docs/AI_RESPONSE_GENERATION.md

This is Phase 2 of Feature #4: AI-Powered Inquiry Response & Follow-up System

Authorization: ADMIN and OPERATOR roles only
Database: Integrates with InquiryResponse model from Phase 1
Email: Supports SMTP configuration via environment variables

--- a/.env.example
+++ b/.env.example
@@ -119,3 +119,23 @@ CLOUDINARY_API_SECRET=your_api_secret_here
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=your_cloud_name_here
 CLOUDINARY_URL=cloudinary://your_api_key:your_api_secret@your_cloud_name
 
+
+
+
+# =============================================
+# AI-Powered Inquiry Response System (Feature #4)
+# =============================================
+
+# Email Configuration for Inquiry Responses
+# Use these settings if you want dedicated SMTP for inquiry responses
+# Otherwise, the system will use the EMAIL_SERVER_* settings above
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+SMTP_FROM=noreply@carelinkai.com
+
+# OpenAI Configuration for AI Response Generation
+# Note: OPENAI_API_KEY should already be set above
+# If not, add it here:
+# OPENAI_API_KEY=sk-your-openai-api-key
