feat: Implement automated follow-up system (Feature #4 Phase 3)
Phase 3 adds intelligent automated follow-up scheduling with multi-channel delivery.

New Components:
- Follow-up Rules Engine: 7 default rules for automated scheduling
- Follow-up Scheduler: Auto and manual scheduling with deduplication
- SMS Service: Twilio integration for SMS delivery
- Follow-up Processor: Background processing of due follow-ups
- Inquiry Hooks: Auto-scheduling on inquiry creation/update

Features:
✅ Rules-based follow-up scheduling
✅ Multi-channel delivery (Email, SMS, Phone Call, Task)
✅ Auto-scheduling on inquiry creation/stage change
✅ Manual override (cancel, reschedule, complete)
✅ Background processing via cron job
✅ Deduplication to prevent duplicate follow-ups
✅ AI-generated content for follow-ups
✅ Status tracking and audit trail

API Endpoints:
- POST /api/follow-ups/process (cron endpoint)
- PATCH /api/follow-ups/:id (update follow-up)
- DELETE /api/follow-ups/:id (delete follow-up)

Configuration:
- Twilio SMS integration (optional)
- CRON_SECRET for background processing
- Updated .env.example with new variables

Documentation:
- Comprehensive guide: docs/AUTOMATED_FOLLOWUP_SYSTEM.md
- Implementation summary: FEATURE_4_PHASE_3_IMPLEMENTATION.md
- API reference, configuration, and troubleshooting

Dependencies:
- Added twilio package for SMS delivery
- Added @types/twilio for TypeScript support

Files Created: 11
Files Modified: 5
Total Lines: ~2,000

This completes Feature #4 Phase 3 implementation.

--- a/.env.example
+++ b/.env.example
@@ -18,10 +18,11 @@ AWS_REGION=us-east-1
 S3_BUCKET=
 S3_DISABLE=1 # set to 1 in CI/local to use mock uploads
 
-# Twilio (optional)
-TWILIO_ACCOUNT_SID=
-TWILIO_AUTH_TOKEN=
+# Twilio (optional - for SMS notifications)
+TWILIO_ACCOUNT_SID=your-twilio-account-sid
+TWILIO_AUTH_TOKEN=your-twilio-auth-token
 TWILIO_MESSAGING_SERVICE_SID=
+TWILIO_PHONE_NUMBER=+1234567890
 
 # For Outlook/Office365:
 # SMTP_HOST=smtp.office365.com
@@ -139,3 +140,11 @@ SMTP_FROM=noreply@carelinkai.com
 # Note: OPENAI_API_KEY should already be set above
 # If not, add it here:
 # OPENAI_API_KEY=sk-your-openai-api-key
+
+# =============================================
+# Automated Follow-up System (Feature #4 Phase 3)
+# =============================================
+
+# Cron Job Secret (for automated follow-up processing)
+# Generate a secure random string for this
+CRON_SECRET=your-secure-random-secret-here
