--- a/package.json
+++ b/package.json
@@ -124,7 +124,7 @@
     "socket.io-client": "^4.7.2",
     "stripe": "^14.5.0",
     "tailwind-merge": "^3.4.0",
-    "twilio": "^5.8.2",
+    "twilio": "^5.11.1",
     "uuid": "^9.0.1",
     "web-push": "^3.6.7",
     "zod": "^3.25.76"
@@ -142,6 +142,7 @@
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
+    "@types/twilio": "^3.19.2",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
