--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.859.0",
     "@aws-sdk/s3-request-presigner": "^3.859.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@fullcalendar/core": "^6.1.18",
     "@fullcalendar/daygrid": "^6.1.18",
     "@fullcalendar/interaction": "^6.1.18",
@@ -118,11 +121,12 @@
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
     "react-virtuoso": "4.14.1",
-    "recharts": "^3.5.1",
+    "recharts": "^3.6.0",
     "sharp": "^0.33.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "stripe": "^14.5.0",
+    "swr": "^2.3.8",
     "tailwind-merge": "^3.4.0",
     "twilio": "^5.11.1",
     "uuid": "^9.0.1",
