--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "openai": "^6.13.0",
     "otplib": "^12.0.1",
     "papaparse": "^5.5.3",
+    "pdf-lib": "^1.17.1",
     "pdfkit": "0.17.2",
     "pino": "10.1.0",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -120,6 +121,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
+    "react-pdf": "^10.2.0",
     "react-virtuoso": "4.14.1",
     "recharts": "^3.6.0",
     "sharp": "^0.33.0",
@@ -128,6 +130,7 @@
     "stripe": "^14.5.0",
     "swr": "^2.3.8",
     "tailwind-merge": "^3.4.0",
+    "tesseract.js": "^7.0.0",
     "twilio": "^5.11.1",
     "uuid": "^9.0.1",
     "web-push": "^3.6.7",
