--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@opentelemetry/sdk-node": "0.207.0",
     "@prisma/client": "^6.7.0",
     "@prisma/instrumentation": "^6.18.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@sendgrid/mail": "^8.1.5",
     "@sentry/nextjs": "10.21.0",
@@ -127,6 +128,7 @@
     "sharp": "^0.33.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
+    "sonner": "^2.0.7",
     "stripe": "^14.5.0",
     "swr": "^2.3.8",
     "tailwind-merge": "^3.4.0",
