fix: remove Docker files and configure Node runtime
Changes:
- Deleted Dockerfile
- Deleted Dockerfile.backup
- Updated render.yaml with explicit Node runtime configuration

Documentation:
- FORCE_NODE_RUNTIME.md: Step-by-step migration guide
- RENDER_RUNTIME_ANALYSIS.md: Technical analysis and impact
- QUICK_FIX_DOCKER_RUNTIME.md: Quick reference guide

Issue: Render service was created as Docker type, which is permanent.
Solution: Service must be deleted and recreated for Node runtime.

Expected outcome after service recreation:
- Runtime: Node 20.x (not Docker)
- Build time: 5-10 min (not 60-120 min)
- Build size: ~200MB (not ~500MB)
- 10-20x faster deployments

--- a/render.yaml
+++ b/render.yaml
@@ -1,20 +1,13 @@
 services:
   - type: web
     name: carelinkai
-    env: docker
-    autoDeploy: true
+    env: node
+    region: oregon
     plan: starter
-    dockerfilePath: ./Dockerfile
+    buildCommand: npm install && npx prisma generate && npm run build
+    startCommand: npm start
     envVars:
-      - key: NEXTAUTH_URL
-        value: https://carelinkai.onrender.com
-      - key: NEXTAUTH_SECRET
-        generateValue: true
-      - key: DATABASE_URL
-        fromDatabase:
-          name: carelinkai-db
-          property: connectionString
-
-databases:
-  - name: carelinkai-db
-    plan: basic-1gb
+      - key: NODE_VERSION
+        value: 20.11.0
+      - key: NODE_ENV
+        value: production
