--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@prisma/client": "^6.7.0",
     "@prisma/instrumentation": "^6.18.0",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@sendgrid/mail": "^8.1.5",
     "@sentry/nextjs": "10.21.0",
@@ -109,6 +110,7 @@
     "otplib": "^12.0.1",
     "papaparse": "^5.5.3",
     "pdf-lib": "^1.17.1",
+    "pdf-parse": "^2.4.5",
     "pdfkit": "0.17.2",
     "pino": "10.1.0",
     "postcss-flexbugs-fixes": "^5.0.2",
