feat: add verbose build scripts for debugging silent build failure
Issue:
- Build failing silently after npm install
- No output from prisma generate or npm run build
- No error messages in Render logs

Solution:
- Created render-build-verbose.sh with explicit error handling
- Created build-simple.sh as alternative
- Added render.yaml for Render configuration
- Added step-by-step logging and exit codes

Features:
- Verbose output for each build step
- Clear error messages
- Exit code tracking
- Environment info logging

Usage:
Update Render build command to: bash render-build-verbose.sh

This will show exactly where the build is failing.

--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,14 @@
 services:
   - type: web
     name: carelinkai
-    env: node
+    runtime: node
     region: oregon
     plan: starter
-    buildCommand: npm install && npx prisma generate && npm run build
+    buildCommand: bash render-build-verbose.sh
     startCommand: npm start
     envVars:
       - key: NODE_VERSION
-        value: 20.11.0
+        value: "20.11.0"
       - key: NODE_ENV
         value: production
+    healthCheckPath: /
