--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "migrate:deploy": "npx prisma migrate resolve --rolled-back draft_add_document_processing || true && npx prisma migrate resolve --rolled-back 20251218162945_update_homes_to_active || true && npx prisma migrate deploy",
     "migrate:resolve": "bash scripts/resolve-failed-migration.sh",
     "migrate:resolve-20251218": "bash scripts/resolve-failed-migration-20251218.sh",
-    "migrate:resolve-manual": "prisma migrate resolve --rolled-back 20251208170953_add_assessments_incidents_fields && prisma migrate resolve --rolled-back 20251208170953_add_assessments_incidents_fields.failed_backup"
+    "migrate:resolve-manual": "prisma migrate resolve --rolled-back 20251208170953_add_assessments_incidents_fields && prisma migrate resolve --rolled-back 20251208170953_add_assessments_incidents_fields.failed_backup",
+    "postinstall": "prisma generate"
   },
   "prisma": {
     "seed": "ts-node --transpile-only prisma/seed.ts"
@@ -137,7 +138,8 @@
     "twilio": "^5.11.1",
     "uuid": "^9.0.1",
     "web-push": "^3.6.7",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "prisma": "^6.7.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
@@ -167,7 +169,6 @@
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "prisma": "^6.7.0",
     "tailwindcss": "^3.3.5",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.1",
