--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "@opentelemetry/instrumentation-http": "^0.207.0",
     "@opentelemetry/instrumentation-undici": "^0.18.0",
     "@opentelemetry/sdk-node": "0.207.0",
-    "@prisma/client": "^6.7.0",
+    "@prisma/client": "6.19.1",
     "@prisma/instrumentation": "^6.18.0",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-tabs": "^1.1.13",
@@ -87,6 +87,7 @@
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "critters": "^0.0.23",
+    "cross-env": "^10.1.0",
     "cssnano": "^7.1.0",
     "date-fns": "^2.30.0",
     "dompurify": "^3.3.0",
@@ -115,6 +116,7 @@
     "pino": "10.1.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^10.2.4",
+    "prisma": "^6.7.0",
     "qrcode": "^1.5.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -138,8 +140,7 @@
     "twilio": "^5.11.1",
     "uuid": "^9.0.1",
     "web-push": "^3.6.7",
-    "zod": "^3.25.76",
-    "prisma": "^6.7.0"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
@@ -161,7 +162,6 @@
     "autoprefixer": "^10.4.16",
     "canvas": "^3.2.0",
     "concurrently": "^8.2.2",
-    "cross-env": "^7.0.3",
     "eslint": "^8.54.0",
     "eslint-config-next": "14.0.4",
     "jest": "^29.7.0",
