--- a/package.json
+++ b/package.json
@@ -77,7 +77,12 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/bcrypt": "^6.0.0",
     "@types/dompurify": "^3.0.5",
+    "@types/node": "^25.0.3",
     "@types/nodemailer": "^6.4.17",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@typescript-eslint/eslint-plugin": "^8.50.0",
+    "@typescript-eslint/parser": "^8.50.0",
     "archiver": "^7.0.1",
     "autoprefixer": "^10.4.23",
     "aws-sdk": "^2.1692.0",
@@ -92,6 +97,8 @@
     "cssnano": "^7.1.0",
     "date-fns": "^2.30.0",
     "dompurify": "^3.3.0",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.0",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
@@ -140,7 +147,10 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.19",
     "tesseract.js": "^7.0.0",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.21.0",
     "twilio": "^5.11.1",
+    "typescript": "^5.9.3",
     "uuid": "^9.0.1",
     "web-push": "^3.6.7",
     "zod": "^3.25.76"
@@ -152,28 +162,18 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^29.5.10",
     "@types/leaflet": "^1.9.20",
-    "@types/node": "^20.10.0",
     "@types/papaparse": "^5.5.1",
     "@types/pdfkit": "^0.13.9",
     "@types/qrcode": "^1.5.5",
-    "@types/react": "^18.2.38",
-    "@types/react-dom": "^18.2.17",
     "@types/twilio": "^3.19.2",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
     "canvas": "^3.2.0",
     "concurrently": "^8.2.2",
-    "eslint": "^8.54.0",
-    "eslint-config-next": "14.0.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "ts-jest": "^29.4.1",
-    "ts-node": "^10.9.1",
-    "tsx": "^4.21.0",
-    "typescript": "^5.3.2"
+    "ts-jest": "^29.4.1"
   },
   "engines": {
     "node": ">=18.0.0"
