--- a/package.json
+++ b/package.json
@@ -81,8 +81,6 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "@typescript-eslint/eslint-plugin": "^8.50.0",
-    "@typescript-eslint/parser": "^8.50.0",
     "archiver": "^7.0.1",
     "autoprefixer": "^10.4.23",
     "aws-sdk": "^2.1692.0",
@@ -97,8 +95,6 @@
     "cssnano": "^7.1.0",
     "date-fns": "^2.30.0",
     "dompurify": "^3.3.0",
-    "eslint": "^9.39.2",
-    "eslint-config-next": "^16.1.0",
     "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
@@ -167,8 +163,12 @@
     "@types/qrcode": "^1.5.5",
     "@types/twilio": "^3.19.2",
     "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "canvas": "^3.2.0",
     "concurrently": "^8.2.2",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.0.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.1.0",
@@ -184,6 +184,7 @@
     "globalTeardown": "<rootDir>/jest.teardown.js",
     "testPathIgnorePatterns": [
       "<rootDir>/e2e/",
+      "<rootDir>/tests/",
       "<rootDir>/.next/"
     ],
     "moduleNameMapper": {
