fix: resolve migration conflict by marking failed migration as rolled back
Issue: Deployment failing with migration error P3018
Error: Migration 'draft_add_document_processing' failed
Root Cause: Failed migration '20251220024025_phase1a_document_processing' blocking deployments

Database State Investigation:
- DocumentType enum EXISTS in database with correct values
- Migration '20251221011617_add_document_classification_validation' successfully applied
- Failed migration '20251220024025_phase1a_document_processing' found in migration history

Solution Applied:
1. Added rollback command for '20251220024025_phase1a_document_processing' to migrate:deploy script
2. Ensured all known failed migrations are marked as rolled back before deploy
3. Verified database schema is up to date after fix

Changes:
- Modified: package.json
  - Updated migrate:deploy script to include rollback for '20251220024025_phase1a_document_processing'
  - Rollback commands: draft_add_document_processing, 20251220024025_phase1a_document_processing, 20251218162945_update_homes_to_active, 20251221011617_add_document_classification_validation

Testing:
- Local migration test: SUCCESS ✅
- Database schema verification: UP TO DATE ✅
- Build test: PASSED ✅
- No pending migrations: CONFIRMED ✅

This fix allows the following changes to deploy:
- Resident page TypeError fix (getInitials function)
- Phase 3 Fix #1: Resident View page error handling
- Phase 3 Fix #2: Confidence scores display
- Phase 3 Fix #3: Color coding by confidence

Status: READY FOR PRODUCTION DEPLOYMENT

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "cron:schedule": "node scripts/run-cron.js --mode schedule",
     "cron:run": "node scripts/run-cron.js",
     "type-check": "tsc -p tsconfig.json --noEmit",
-    "migrate:deploy": "npx prisma migrate resolve --rolled-back draft_add_document_processing || true && npx prisma migrate resolve --rolled-back 20251218162945_update_homes_to_active || true && npx prisma migrate resolve --rolled-back 20251221011617_add_document_classification_validation || true && npx prisma migrate deploy",
+    "migrate:deploy": "npx prisma migrate resolve --rolled-back draft_add_document_processing || true && npx prisma migrate resolve --rolled-back 20251220024025_phase1a_document_processing || true && npx prisma migrate resolve --rolled-back 20251218162945_update_homes_to_active || true && npx prisma migrate resolve --rolled-back 20251221011617_add_document_classification_validation || true && npx prisma migrate deploy",
     "migrate:resolve": "bash scripts/resolve-failed-migration.sh",
     "migrate:resolve-20251218": "bash scripts/resolve-failed-migration-20251218.sh",
     "migrate:resolve-manual": "prisma migrate resolve --rolled-back 20251208170953_add_assessments_incidents_fields && prisma migrate resolve --rolled-back 20251208170953_add_assessments_incidents_fields.failed_backup",
