🔧 Fix: Exclude ALL Playwright config files from build
Build Error Fix:
- Exclude playwright.config.prod.ts
- Exclude playwright.config*.ts (all variants)
- Add comprehensive test file exclusions
- Exclude test directories and results

This fixes the build error:
'Cannot find module @playwright/test' in playwright.config.prod.ts

Previous fix excluded playwright.config.ts but missed playwright.config.prod.ts
Now using pattern matching to exclude ALL Playwright files.

Deployment: #8 (retry 2)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -80,6 +80,7 @@
     ".next",
     "out",
     "dist",
+    "build",
     "coverage",
     "public",
     "**/*.test.ts",
@@ -90,7 +91,14 @@
     "src/unused/**",
     "e2e",
     "e2e/**/*",
+    "tests",
+    "test",
+    "__tests__",
     "playwright.config.ts",
-    "tests"
+    "playwright.config.prod.ts",
+    "playwright.config*.ts",
+    "playwright-report",
+    "test-results",
+    ".playwright"
   ]
 }
