🔧 Fix: Exclude ALL Prisma seed files from build
Build Error Fix:
- Exclude prisma/seed.ts
- Exclude prisma/seed*.ts (all seed files)
- Exclude prisma/**/*.seed.ts
- Exclude scripts/ folder

This fixes the build error:
Type error in prisma/seed-appointments.ts

Seed files are development-only and should not be compiled
in production builds.

Deployment: #8 (retry 3)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -99,6 +99,11 @@
     "playwright.config*.ts",
     "playwright-report",
     "test-results",
-    ".playwright"
+    ".playwright",
+    "prisma/seed.ts",
+    "prisma/seed*.ts",
+    "prisma/**/*.seed.ts",
+    "scripts",
+    "scripts/**/*"
   ]
 }
