🔧 Fix: Add custom type declaration for bcryptjs
Build Error Fix (Alternative Approach):
- Create custom type declaration file: src/types/bcryptjs.d.ts
- Update tsconfig.json to include custom types directory
- Add typeRoots: ['./node_modules/@types', './src/types']

This fixes the TypeScript compilation error:
'Could not find a declaration file for module bcryptjs'
in src/app/api/auth/disable-2fa/route.ts

Alternative approach: Custom type declarations instead of @types package
This bypasses npm install issues and provides types directly.

Deployment: #8 (retry 6 - custom types approach)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,6 +51,12 @@
       "@/public/*": ["./public/*"]
     },
 
+    /* Type Roots */
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types"
+    ],
+
     /* Source Map Options */
     "sourceMap": true,
     "inlineSources": true,
