Add CareBot - 24/7 AI chatbot for family assistance
Features:
- Floating chat button on all pages
- Real-time streaming AI responses
- Comprehensive senior care knowledge base
- Session storage for chat history
- Mobile responsive design
- Empathetic and professional tone
- Escalation to human support when needed

Files added:
- src/components/carebot/FloatingChatButton.tsx
- src/components/carebot/ChatWindow.tsx
- src/app/api/carebot/chat/route.ts
- CAREBOT_IMPLEMENTATION_GUIDE.md

Files modified:
- src/app/layout.tsx (added CareBot integration)
- .env (added ABACUSAI_API_KEY)

--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ CLOUDINARY_API_KEY=328392542172231
 CLOUDINARY_API_SECRET=KhpohAEFGsjVKuXRENaBhCoIYFQ
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dygtsnu8z
 CLOUDINARY_URL=cloudinary://328392542172231:KhpohAEFGsjVKuXRENaBhCoIYFQ@dygtsnu8z
+
+# LLM API Key for CareBot
+ABACUSAI_API_KEY="2639fe6caf714373a772c3f44853bf4d"
