--- a/.env.example
+++ b/.env.example
@@ -1,150 +1,25 @@
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=change-me
+# Database
+DATABASE_URL="postgresql://user:password@localhost:5432/carelinkai"
 
-# Database (PostgreSQL)
-DATABASE_URL=postgresql://postgres:postgres@postgres:5432/carelinkai_marketplace?schema=public
+# NextAuth
+NEXTAUTH_URL="http://localhost:5000"
+NEXTAUTH_SECRET="your-nextauth-secret-here"
 
-# Stripe (optional for billing features)
-STRIPE_SECRET_KEY=
-STRIPE_WEBHOOK_SECRET=
+# Google Analytics 4
+NEXT_PUBLIC_GA_ID="G-XXXXXXXXXX"
 
-# Email (optional)
-SENDGRID_API_KEY=
+# Google Tag Manager
+NEXT_PUBLIC_GTM_ID="GTM-XXXXXXX"
 
-# S3 (optional)
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=us-east-1
-S3_BUCKET=
-S3_DISABLE=1 # set to 1 in CI/local to use mock uploads
+# Facebook Pixel
+NEXT_PUBLIC_FB_PIXEL_ID="1234567890123456"
 
-# Twilio (optional - for SMS notifications)
-TWILIO_ACCOUNT_SID=your-twilio-account-sid
-TWILIO_AUTH_TOKEN=your-twilio-auth-token
-TWILIO_MESSAGING_SERVICE_SID=
-TWILIO_PHONE_NUMBER=+1234567890
+# Microsoft Clarity
+NEXT_PUBLIC_CLARITY_ID="xxxxxxxxxx"
 
-# For Outlook/Office365:
-# SMTP_HOST=smtp.office365.com
-# SMTP_PORT=587
-# SMTP_USER=your-email@outlook.com
-# SMTP_PASSWORD=your-password
-# SMTP_SECURE=false
+# Sentry Error Monitoring
+NEXT_PUBLIC_SENTRY_DSN="https://xxxx@xxxx.ingest.sentry.io/xxxx"
+NEXT_PUBLIC_ENVIRONMENT="production"
 
-# For Custom SMTP:
-# SMTP_HOST=mail.yourcompany.com
-# SMTP_PORT=465
-# SMTP_USER=noreply@yourcompany.com
-# SMTP_PASSWORD=your-smtp-password
-# SMTP_SECURE=true  # Use true for port 465, false for port 587
-
-# =============================================
-# Stripe Configuration (for payments)
-# =============================================
-STRIPE_SECRET_KEY=sk_test_your-stripe-secret-key
-STRIPE_PUBLISHABLE_KEY=pk_test_your-stripe-publishable-key
-STRIPE_WEBHOOK_SECRET=whsec_your-stripe-webhook-secret
-
-# =============================================
-# Storage Configuration (for file uploads)
-# =============================================
-# AWS S3 Configuration
-# S3_BUCKET_NAME=carelinkai-storage
-# S3_REGION=us-west-2
-# AWS_ACCESS_KEY_ID=your-aws-access-key
-# AWS_SECRET_ACCESS_KEY=your-aws-secret-key
-
-# =============================================
-# Marketplace Feature Flag
-# =============================================
-# Toggle Marketplace module (true = enabled, false = disabled)
-NEXT_PUBLIC_MARKETPLACE_ENABLED=true
-# =============================================
-# Observability (Sentry)
-# =============================================
-SENTRY_DSN=
-SENTRY_TRACES_SAMPLE_RATE=0.1
-NEXT_PUBLIC_SENTRY_DSN=
-NEXT_PUBLIC_SENTRY_TRACES_SAMPLE_RATE=0.1
-
-# =============================================
-# AWS S3 (Production)
-# =============================================
-AWS_REGION=us-west-2
-AWS_S3_BUCKET=carelinkai-credentials
-AWS_S3_ENDPOINT=
-AWS_S3_FORCE_PATH_STYLE=false
-
-# =============================================
-# Redis (Rate Limiting / Caching)
-# =============================================
-# For Render/Upstash/etc. Use rediss:// for TLS when required
-REDIS_URL=
-
-
-# =============================================
-# OpenTelemetry (Tracing)
-# =============================================
-# Example: https://api.honeycomb.io or your OTLP collector endpoint
-OTEL_EXPORTER_OTLP_ENDPOINT=
-# Optional headers, e.g. x-honeycomb-team=YOUR_API_KEY
-OTEL_EXPORTER_OTLP_HEADERS=
-# Service name reported in traces
-OTEL_SERVICE_NAME=carelinkai
-
-# =============================================
-# Email SMTP (Production)
-# =============================================
-EMAIL_FROM=noreply@carelinkai.com
-EMAIL_FROM_NAME=CareLinkAI
-EMAIL_SERVER_HOST=
-EMAIL_SERVER_PORT=587
-EMAIL_SERVER_SECURE=false
-EMAIL_SERVER_USER=
-EMAIL_SERVER_PASSWORD=
-# Alternative SMTP naming (used by EmailService)
-# SMTP_HOST=
-# SMTP_PORT=587
-# SMTP_SECURE=false
-# SMTP_USER=
-# SMTP_PASSWORD=
-# Residents Module
-NEXT_PUBLIC_RESIDENTS_ENABLED=true
-
-# =============================================
-# Cloudinary Configuration (for image/file uploads)
-# =============================================
-CLOUDINARY_CLOUD_NAME=your_cloud_name_here
-CLOUDINARY_API_KEY=your_api_key_here
-CLOUDINARY_API_SECRET=your_api_secret_here
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=your_cloud_name_here
-CLOUDINARY_URL=cloudinary://your_api_key:your_api_secret@your_cloud_name
-
-
-
-
-# =============================================
-# AI-Powered Inquiry Response System (Feature #4)
-# =============================================
-
-# Email Configuration for Inquiry Responses
-# Use these settings if you want dedicated SMTP for inquiry responses
-# Otherwise, the system will use the EMAIL_SERVER_* settings above
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
-SMTP_FROM=noreply@carelinkai.com
-
-# OpenAI Configuration for AI Response Generation
-# Note: OPENAI_API_KEY should already be set above
-# If not, add it here:
-# OPENAI_API_KEY=sk-your-openai-api-key
-
-# =============================================
-# Automated Follow-up System (Feature #4 Phase 3)
-# =============================================
-
-# Cron Job Secret (for automated follow-up processing)
-# Generate a secure random string for this
-CRON_SECRET=your-secure-random-secret-here
+# App Configuration
+NEXT_PUBLIC_APP_URL="https://your-domain.com"
