--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "clean": "rm -rf .next node_modules/.prisma/client && prisma generate",
     "prebuild": "rm -rf .next && prisma generate",
-    "build": "NEXT_TELEMETRY_DISABLED=1 next build",
+    "build": "NODE_OPTIONS='--max-old-space-size=4096' NEXT_TELEMETRY_DISABLED=1 next build",
     "start": "npm run migrate:deploy && next start",
     "start:e2e": "cross-env NODE_ENV=production NEXTAUTH_URL=http://localhost:3000 NEXTAUTH_SECRET=devsecret ALLOW_DEV_ENDPOINTS=1 ALLOW_INSECURE_AUTH_COOKIE=1 DATABASE_URL=postgresql://postgres:postgres@localhost:5434/carelinkai_marketplace?schema=public npm run start",
     "lint": "next lint",
