--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@sendgrid/mail": "^8.1.5",
     "@sentry/nextjs": "^10.32.1",
+    "@sentry/profiling-node": "^10.32.1",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
