fix: Update Sentry DSN to correct value from dashboard

--- a/.env
+++ b/.env
@@ -18,5 +18,6 @@ ABACUSAI_API_KEY="2639fe6caf714373a772c3f44853bf4d"
 NEXT_PUBLIC_GA_MEASUREMENT_ID=G-C8L4GJ3OZ9
 NEXT_PUBLIC_GTM_ID=GTM-TNZF9G3M
 NEXT_PUBLIC_CLARITY_PROJECT_ID=uu6rjw7bqo
-NEXT_PUBLIC_SENTRY_DSN=https://d649b9c85c145427fcfb62cecdeaa2d9e@o4510110703216128.ingest.us.sentry.io/4510154420089472
+SENTRY_DSN=https://4649b9c85c1454217cfb62cecdea2d9e@o4510119703216128.ingest.us.sentry.io/4510154426089472
+NEXT_PUBLIC_SENTRY_DSN=https://4649b9c85c1454217cfb62cecdea2d9e@o4510119703216128.ingest.us.sentry.io/4510154426089472
 NEXT_PUBLIC_FACEBOOK_PIXEL_ID=244432082802031
