feat: Switch to Resend API for email delivery
- Created new email utility using Resend API (src/lib/email.ts)
- Updated registration route to use Resend instead of SMTP
- Updated resend-verification route to use Resend
- Added RESEND_API_KEY to .env.example for documentation
- Removed nodemailer dependency from authentication routes
- Benefits: Simpler setup, no SMTP configuration needed, higher deliverability

Note: RESEND_API_KEY needs to be set on Render as environment variable

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,7 @@ NEXT_PUBLIC_ENVIRONMENT="production"
 
 # App Configuration
 NEXT_PUBLIC_APP_URL="https://your-domain.com"
+
+# Email Configuration (Resend API)
+# Get your API key from: https://resend.com/api-keys
+RESEND_API_KEY="re_xxxxxxxxxxxxxxxxxxxxxxxxxxxx"
