--- a/.env
+++ b/.env
@@ -22,3 +22,8 @@ NEXT_PUBLIC_FACEBOOK_PIXEL_ID=244432082802031
 
 # Bugsnag Configuration (get your API key from Bugsnag dashboard)
 NEXT_PUBLIC_BUGSNAG_API_KEY=f861d640bc00f91ca72d2491291d1d369
+
+# Email Configuration (Resend API)
+# NOTE: This needs to be set on Render as environment variable
+# Get your API key from: https://resend.com/api-keys
+RESEND_API_KEY=re_placeholder_key_set_on_render
