--- a/nextjs_space/package.json
+++ b/nextjs_space/package.json
@@ -1,6 +1,30 @@
 {
+  "name": "carelinkai",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
     "@prisma/client": "^7.2.0",
-    "prisma": "^7.2.0"
+    "autoprefixer": "^10.4.23",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.26.2",
+    "lucide-react": "^0.562.0",
+    "next": "14.2.28",
+    "next-auth": "^4.24.13",
+    "postcss": "^8.5.6",
+    "prisma": "^7.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.6.0",
+    "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "@types/react": "^19",
+    "@types/react-dom": "^19"
   }
 }
