--- a/nextjs_space/package.json
+++ b/nextjs_space/package.json
@@ -17,14 +17,22 @@
     "next": "14.2.28",
     "next-auth": "^4.24.13",
     "postcss": "^8.5.6",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^11.1.1",
     "prisma": "^7.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.6.0",
-    "tailwindcss": "^4.1.18"
+    "react-icons": "^5.5.0",
+    "recharts": "^3.6.0",
+    "tailwindcss": "^4.1.18",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@types/node": "^25.0.9",
+    "@types/postcss-flexbugs-fixes": "^5",
     "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react-dom": "^19",
+    "typescript": "^5.9.3"
   }
 }
