--- a/nextjs_space/package.json
+++ b/nextjs_space/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^7.2.0",
+    "@prisma/client": "6.7.0",
     "autoprefixer": "^10.4.23",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.26.2",
@@ -19,7 +19,7 @@
     "postcss": "^8.5.6",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^11.1.1",
-    "prisma": "^7.2.0",
+    "prisma": "6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.6.0",
