--- a/nextjs_space/package.json
+++ b/nextjs_space/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "6.7.0",
     "autoprefixer": "^10.4.23",
+    "cssnano": "^7.1.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.562.0",
