feat: Replace Bugsnag with Sentry for error tracking
- Removed @bugsnag/js, @bugsnag/node, @bugsnag/plugin-react packages
- Added @sentry/nextjs for comprehensive error tracking
- Created Sentry configuration files (client, server, edge)
- Updated instrumentation.ts for Sentry initialization
- Created src/lib/sentry.ts with helper functions
- Updated ErrorBoundary to use Sentry
- Added global-error.tsx for app-wide error handling
- Created SentryProvider component with user context
- Updated API routes to use Sentry helpers
- Added /api/test-sentry endpoint for testing
- Added SENTRY_DSN placeholder to .env

Features:
- Automatic error capturing
- Performance monitoring
- Session replay support
- User context tracking
- Breadcrumbs for debugging
- Source maps support

--- a/.env
+++ b/.env
@@ -27,3 +27,7 @@ NEXT_PUBLIC_BUGSNAG_API_KEY=f861d640bc00f91ca72d2491291d1d369
 # NOTE: This needs to be set on Render as environment variable
 # Get your API key from: https://resend.com/api-keys
 RESEND_API_KEY=re_placeholder_key_set_on_render
+
+# Sentry Error Tracking
+# Get your DSN from https://sentry.io/settings/<org>/projects/<project>/keys/
+NEXT_PUBLIC_SENTRY_DSN=
