--- a/nextjs_space/package.json
+++ b/nextjs_space/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "6.7.0",
+    "@sentry/nextjs": "^10.35.0",
     "autoprefixer": "^10.4.23",
     "cssnano": "^7.1.2",
     "date-fns": "^4.1.0",
