--- a/nextjs_space/package.json
+++ b/nextjs_space/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "6.7.0",
+    "@prisma/client": "^7.2.0",
     "@sentry/nextjs": "^10.35.0",
     "autoprefixer": "^10.4.23",
     "cssnano": "^7.1.2",
