feat: Add Sentry DSN configuration

--- a/.env
+++ b/.env
@@ -30,4 +30,7 @@ RESEND_API_KEY=re_placeholder_key_set_on_render
 
 # Sentry Error Tracking
 # Get your DSN from https://sentry.io/settings/<org>/projects/<project>/keys/
-NEXT_PUBLIC_SENTRY_DSN=
+
+# Sentry Configuration for Error Tracking
+NEXT_PUBLIC_SENTRY_DSN=https://ac6dd6bc837b4547d48f43896db2adcc@o4510740433076224.ingest.us.sentry.io/4510740481245184
+SENTRY_DSN=https://ac6dd6bc837b4547d48f43896db2adcc@o4510740433076224.ingest.us.sentry.io/4510740481245184
