--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "carelinkai",
-  "version": "1.0.0-build.20260119170000",
+  "version": "1.0.0-build.20260119220000",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -66,6 +66,7 @@
     "@opentelemetry/instrumentation-undici": "^0.18.0",
     "@opentelemetry/sdk-node": "0.207.0",
     "@prisma/client": "6.19.1",
+    "@sentry/nextjs": "^8.0.0",
     "@prisma/instrumentation": "^6.18.0",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-tabs": "^1.1.13",
