--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "carelinkai",
-  "version": "1.0.0-build.20260120033458",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
